# poker-hand-evaluator

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: test.yml
src/: index.py  utils.py
src/entities/: card.py  deck.py  hand.py
src/rankers/: combined_ranker.py  flush_ranker.py  full_house_ranker.py  hand_ranker.py  high_card_ranker.py  kind_ranker.py  pair_ranker.py  straight_ranker.py
src/tests/entities/: hand_test.py
